--- a/client/src/components/Reserve/WaveGroup.css
+++ b/client/src/components/Reserve/WaveGroup.css
@@ -1,31 +1,3 @@
-.form-container {
-  max-width: 600px;
-  max-height: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.788
-  ); /* Semi-transparent white background */
-  backdrop-filter: blur(10px); /* Apply blur */
-  border-radius: 8px; /* Rounded corners */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Shadow effect */
-}
-
-/* Retain all other styles as is */
-
-h1 {
-  font-size: 20px;
-  font-weight: 800;
-}
-
-.form-title {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
 .wave-group {
   position: relative;
   margin-bottom: 20px;
@@ -38,16 +10,17 @@ h1 {
   display: block;
   width: 100%;
   border: none;
-  border-bottom: 1px solid #515151;
-  background: transparent;
+  border-bottom: 1px solid #ffffff;
+  background-color: transparent;
 }
 
 .wave-group .input:focus {
   outline: none;
+  background-color: transparent;
 }
 
 .wave-group .label {
-  color: #999;
+  color: #ffffff;
   font-size: 18px;
   font-weight: normal;
   position: absolute;
@@ -66,7 +39,7 @@ h1 {
 .wave-group .input:valid ~ label .label-char {
   transform: translateY(-20px);
   font-size: 19px;
-  color: #020088;
+  color: #ffffff;
   font-weight: 600;
   margin-top: -5px;
 }
@@ -84,7 +57,7 @@ h1 {
   width: 0;
   bottom: 1px;
   position: absolute;
-  background: #383838;
+  background: #d3faff;
   transition: 0.2s ease all;
 }
 
@@ -99,9 +72,4 @@ h1 {
 .wave-group .input:focus ~ .bar:before,
 .wave-group .input:focus ~ .bar:after {
   width: 50%;
-}
-
-span {
-  color: #000;
-  font-size: 18px;
 }
